--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<a href="#" class="image fit"><img src="images/Executive%20Overview.png" alt="Adventure Works Executive Overview" /></a>
 					<p>Comprehensive Power BI dashboard analyzing global sales, profit margins, and supply chain efficiency. Includes executive KPIs, profit diagnostics, and shipment/inventory analysis.</p>
 					<ul class="actions special">
-						<li><a href="#sql-project" class="button large">Next Project →</a></li>
+						<li><a href="https://github.com/Zaraqbkhan/Adventure-Works-Global-Sales-Operations-Dashboard.git" class="button large">View Project</a></li>
 					</ul>
 				</article>
 
@@ -72,7 +72,7 @@
 						</header>
 						<a href="#" class="image fit"><img src="images/python.png" alt="Python Projects" /></a>
 						<p>1. Telecom Complaints Forecasting using Holt-Winters to model weekly complaint volumes.<br>
-						2. Daily Revenue Prediction for a chocolate brand using ARIMA, SARIMA, and SARIMAX — SARIMAX wins by including promotional factors.</p>
+						2. Daily Revenue Prediction for a chocolate brand using ARIMA, SARIMA, and SARIMAX, SARIMAX wins by including promotional factors.</p>
 						
 						<!-- Fixed button layout -->
 						<ul class="actions special" style="display:flex; justify-content:center; gap:10px; flex-wrap:wrap;">
