--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<!-- Intro -->
 			<div id="intro">
 				<h1>Zaraq’s Portfolio</h1>
-				<p>Mathematician evolved into a Data Analytics Professional — proficient in SQL, Python, R, Power BI, and Excel, with a focus on transforming complex data into clear business value.</p>
+				<p>Passionate about revealing the patterns behind the numbers and shaping them into decisions that matter.</p>
 				<ul class="actions">
 					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 				</ul>
@@ -21,7 +21,7 @@
 
 			<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo">Projects in Data Science & Analysis</a>
+				<a href="index.html" class="logo">Projects</a>
 			</header>
 
 			<!-- Nav -->
